--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -315,3 +315,8 @@ source "fs/dlm/Kconfig"
 source "fs/exfat/Kconfig"
 #endif /*VENDOR_EDIT*/
 endmenu
+
+config BLOCK_UNWANTED_FILES
+	bool "Allow blocking files from executing from kernel"
+	help
+	  This option allows you to forbid executing files from certain folders.
